# src/core/order/order.dto.ts
@@ -4,6 +4,7 @@ export namespace OrderDTO {
     quantidadeItem: number;
     valorItem: number;
   };
+
   export type CreateOrder = {
     numeroPedido: string;
     valorTotal: number;
@@ -22,5 +23,31 @@ export namespace OrderDTO {
     value: number;
     creationDate: string;
     items: Item[];
+  };
+
+  export type ListOrders = {
+    data: Order[];
+    totalPages: number;
+    total: number;
+  };
+}
+
+export namespace OrderExample {
+  export const Item: OrderDTO.Item = {
+    price: 100,
+    productId: "123",
+    quantity: 1000,
+  };
+
+  export const Order: OrderDTO.Order = {
+    creationDate: new Date().toISOString(),
+    items: [Item, Item],
+    orderId: "123",
+    value: 10000,
+  };
+  export const List: OrderDTO.ListOrders = {
+    data: [Order],
+    total: 10,
+    totalPages: 1,
   };
 }
